--- a/index.html
+++ b/index.html
@@ -72,83 +72,83 @@
 
             </section>
             <section class="testimonials">
-                <section class="my-8 dark:bg-gray-100 dark:bg-gray-100 dark:bg-gray-100 dark:bg-gray-100 dark:text-gray-800 dark:text-gray-800 dark:text-gray-800 dark:text-gray-800">
-                    <div class="container flex flex-col items-center mx-auto mb-12 md:p-10 md:px-12">
-                        <h1 class="p-4 text-4xl font-semibold leading-none text-center">What our customers are saying about us</h1>
+                <section class="py-8">
+                    <div class="container flex flex-col items-center mx-auto md:p-10 md:px-12">
+                        <h1 class="p-4 text-6xl font-semibold leading-none text-center font-[font3]">What our customers are saying about us</h1>
                     </div>
                     <div class="container flex flex-col items-center justify-center mx-auto lg:flex-row lg:flex-wrap lg:justify-evenly lg:px-10">
-                        <div class="flex flex-col max-w-sm mx-4 my-6 shadow-lg">
-                            <div class="px-4 py-12 rounded-t-lg sm:px-8 md:px-12 dark:bg-gray-50 dark:bg-gray-50 dark:bg-gray-50 dark:bg-gray-50">
-                                <p class="relative px-6 py-1 text-lg italic text-center dark:text-gray-800 dark:text-gray-800 dark:text-gray-800 dark:text-gray-800">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="w-8 h-8 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600">
+                        <div class="flex flex-col max-w-sm mx-4 my-6 border-2 rounded-xl">
+                            <div class="px-4 py-12 rounded-t-lg sm:px-8 md:px-12">
+                                <p class="relative px-6 py-1 text-lg italic text-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="w-8 h-8">
                                         <path d="M232,246.857V16H16V416H54.4ZM48,48H200V233.143L48,377.905Z"></path>
                                         <path d="M280,416h38.4L496,246.857V16H280ZM312,48H464V233.143L312,377.905Z"></path>
                                     </svg>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus quibusdam, eligendi exercitationem molestias possimus facere.
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute right-0 w-8 h-8 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute right-0 w-8 h-8">
                                         <path d="M280,185.143V416H496V16H457.6ZM464,384H312V198.857L464,54.1Z"></path>
                                         <path d="M232,16H193.6L16,185.143V416H232ZM200,384H48V198.857L200,54.1Z"></path>
                                     </svg>
                                 </p>
                             </div>
-                            <div class="flex flex-col items-center justify-center p-8 rounded-b-lg dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50">
-                                <img src="https://source.unsplash.com/50x50/?portrait?1" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300">
+                            <div class="flex flex-col items-center justify-center p-8 bg-zinc-300 text-black rounded-b-lg">
+                                <img src="https://source.unsplash.com/50x50/?portrait?1" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full">
                                 <p class="text-xl font-semibold leading-tight">Person1</p>
                                 <p class="text-sm uppercase">Consumer</p>
                             </div>
                         </div>
-                        <div class="flex flex-col max-w-sm mx-4 my-6 shadow-lg">
-                            <div class="px-4 py-12 rounded-t-lg sm:px-8 md:px-12 dark:bg-gray-50 dark:bg-gray-50 dark:bg-gray-50 dark:bg-gray-50">
-                                <p class="relative px-6 py-1 text-lg italic text-center dark:text-gray-800 dark:text-gray-800 dark:text-gray-800 dark:text-gray-800">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="w-8 h-8 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600">
+                        <div class="flex flex-col max-w-sm mx-4 my-6 border-2 rounded-xl">
+                            <div class="px-4 py-12 rounded-t-lg sm:px-8 md:px-12">
+                                <p class="relative px-6 py-1 text-lg italic text-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="w-8 h-8">
                                         <path d="M232,246.857V16H16V416H54.4ZM48,48H200V233.143L48,377.905Z"></path>
                                         <path d="M280,416h38.4L496,246.857V16H280ZM312,48H464V233.143L312,377.905Z"></path>
                                     </svg>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus quibusdam, eligendi exercitationem molestias possimus facere.
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute right-0 w-8 h-8 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute right-0 w-8 h-8">
                                         <path d="M280,185.143V416H496V16H457.6ZM464,384H312V198.857L464,54.1Z"></path>
                                         <path d="M232,16H193.6L16,185.143V416H232ZM200,384H48V198.857L200,54.1Z"></path>
                                     </svg>
                                 </p>
                             </div>
-                            <div class="flex flex-col items-center justify-center p-8 rounded-b-lg dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50">
-                                <img src="https://source.unsplash.com/50x50/?portrait?2" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300">
+                            <div class="flex flex-col items-center justify-center p-8 bg-zinc-300 text-black rounded-b-lg">
+                                <img src="https://source.unsplash.com/50x50/?portrait?2" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full">
                                 <p class="text-xl font-semibold leading-tight">Person2</p>
                                 <p class="text-sm uppercase">Consumer</p>
                             </div>
                         </div>
-                        <div class="flex flex-col max-w-sm mx-4 my-6 shadow-lg">
-                            <div class="px-4 py-12 rounded-t-lg sm:px-8 md:px-12 dark:bg-gray-50 dark:bg-gray-50 dark:bg-gray-50 dark:bg-gray-50">
-                                <p class="relative px-6 py-1 text-lg italic text-center dark:text-gray-800 dark:text-gray-800 dark:text-gray-800 dark:text-gray-800">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="w-8 h-8 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600">
+                        <div class="flex flex-col max-w-sm mx-4 my-6 border-2 rounded-xl">
+                            <div class="px-4 py-12 rounded-t-lg sm:px-8 md:px-12">
+                                <p class="relative px-6 py-1 text-lg italic text-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="w-8 h-8">
                                         <path d="M232,246.857V16H16V416H54.4ZM48,48H200V233.143L48,377.905Z"></path>
                                         <path d="M280,416h38.4L496,246.857V16H280ZM312,48H464V233.143L312,377.905Z"></path>
                                     </svg>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus quibusdam, eligendi exercitationem molestias possimus facere.
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute right-0 w-8 h-8 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute right-0 w-8 h-8">
                                         <path d="M280,185.143V416H496V16H457.6ZM464,384H312V198.857L464,54.1Z"></path>
                                         <path d="M232,16H193.6L16,185.143V416H232ZM200,384H48V198.857L200,54.1Z"></path>
                                     </svg>
                                 </p>
                             </div>
-                            <div class="flex flex-col items-center justify-center p-8 rounded-b-lg dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50">
-                                <img src="https://source.unsplash.com/50x50/?portrait?3" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300">
+                            <div class="flex flex-col items-center justify-center p-8 bg-zinc-300 text-black rounded-b-lg">
+                                <img src="https://source.unsplash.com/50x50/?portrait?3" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full">
                                 <p class="text-xl font-semibold leading-tight">Person3</p>
                                 <p class="text-sm uppercase">Consumer</p>
                             </div>
                         </div>
-                        <div class="flex flex-col max-w-sm mx-4 my-6 shadow-lg">
-                            <div class="px-4 py-12 rounded-t-lg sm:px-8 md:px-12 dark:bg-gray-50 dark:bg-gray-50 dark:bg-gray-50 dark:bg-gray-50">
-                                <p class="relative px-6 py-1 text-lg italic text-center dark:text-gray-800 dark:text-gray-800 dark:text-gray-800 dark:text-gray-800">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="w-8 h-8 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600">
+                        <div class="flex flex-col max-w-sm mx-4 my-6 border-2 rounded-xl">
+                            <div class="px-4 py-12 rounded-t-lg sm:px-8 md:px-12">
+                                <p class="relative px-6 py-1 text-lg italic text-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="w-8 h-8">
                                         <path d="M232,246.857V16H16V416H54.4ZM48,48H200V233.143L48,377.905Z"></path>
                                         <path d="M280,416h38.4L496,246.857V16H280ZM312,48H464V233.143L312,377.905Z"></path>
                                     </svg>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus quibusdam, eligendi exercitationem molestias possimus facere.
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute right-0 w-8 h-8 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600 dark:text-violet-600">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor" class="absolute right-0 w-8 h-8">
                                         <path d="M280,185.143V416H496V16H457.6ZM464,384H312V198.857L464,54.1Z"></path>
                                         <path d="M232,16H193.6L16,185.143V416H232ZM200,384H48V198.857L200,54.1Z"></path>
                                     </svg>
                                 </p>
                             </div>
-                            <div class="flex flex-col items-center justify-center p-8 rounded-b-lg dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:bg-violet-600 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50 dark:text-gray-50">
-                                <img src="https://source.unsplash.com/50x50/?portrait?4" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-500 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300 dark:bg-gray-300">
+                            <div class="flex flex-col items-center justify-center p-8 bg-zinc-300 text-black rounded-b-lg">
+                                <img src="https://source.unsplash.com/50x50/?portrait?4" alt="" class="w-16 h-16 mb-2 -mt-16 bg-center bg-cover rounded-full">
                                 <p class="text-xl font-semibold leading-tight">Person4</p>
                                 <p class="text-sm uppercase">Consumer</p>
                             </div>
@@ -157,7 +157,7 @@
                 </section>
             </section>
         </main>
-        <footer class="px-4 bg-[#0C0712] text-gray-100 ">
+        <footer class="px-4 bg-[#0C0712] text-gray-100 border-t-2 border-zinc-500">
             <div class="container flex flex-col justify-between py-10 mx-auto space-y-8 lg:flex-row lg:space-y-0">
                 <div class="lg:w-1/3">
                     <a rel="noopener noreferrer" href="#" class="flex justify-center space-x-3 lg:justify-start">
