--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 </div>
             </div>
         </header>
+        
         <div id="full" class="max-md:w-5/6 z-20 fixed h-full top-0 right-0 w-3/12 bg-[#17151a] translate-x-full">
             <i class="ri-close-line magnet-target text-3xl absolute top-5 right-5 cursor-pointer"></i>
         </div>
@@ -66,60 +67,17 @@
                     <button class="py-2 px-6 border-2 rounded-lg max-sm:text-sm">Discover our brokerage solutions</button>
                 </div>
             </section>
-            <!-- <section class="About-us">
-                <section class="py-24 relative">
-                    <div class="w-full max-w-7xl px-4 md:px-5 lg:px-5 mx-auto">
-                        <div class="w-full justify-start items-center gap-12 grid lg:grid-cols-2 grid-cols-1">
-                            <div
-                                class="w-full justify-center items-start gap-6 grid sm:grid-cols-2 grid-cols-1 lg:order-first order-last">
-                                <div class="pt-24 lg:justify-center sm:justify-end justify-start items-start gap-2.5 flex">
-                                    <img class=" rounded-xl object-cover" src="./Assets/photos/car1.jpg" alt="about Us image" />
-                                </div>
-                                <img class="sm:ml-0 ml-auto rounded-xl object-cover" src="./Assets/photos/car-dealer.jpg"
-                                    alt="about Us image" />
-                            </div>
-                            <div class="w-full flex-col justify-center lg:items-start items-center gap-10 inline-flex">
-                                <div class="w-full flex-col justify-center items-start gap-8 flex">
-                                    <div class="w-full flex-col justify-start lg:items-start items-center gap-3 flex">
-                                        <h2
-                                        data-translate="aboutHeading"
-                                            class="text-white text-5xl font-semibold font-manrope leading-none lg:text-start text-center font-[font1]">
-                                            Integrity and Excellence in all our work.</h2>
-                                        <p data-translate="aboutHeadingText" class="text-gray-300 text-base font-normal leading-relaxed lg:text-start text-center">
-                                            Every endeavor at Int'l Motor has been a team-driven journey, where each individual has contributed to our success. Together, we've not only facilitated vehicle acquisitions but also built lasting relationships that define the essence of our business.    
-                                        </div>
-                                    <div class="w-full lg:justify-start justify-center items-center sm:gap-10 gap-5 inline-flex">
-                                        <div class="flex-col justify-start items-start inline-flex">
-                                            <h3 class="text-zinc-400 text-4xl font-bold font-manrope leading-normal">0+</h3>
-                                            <h6 class="text-gray-500 text-base font-normal leading-relaxed">Years of Experience</h6>
-                                        </div>
-                                        <div class="flex-col justify-start items-start inline-flex">
-                                            <h4 class="text-zinc-400 text-4xl font-bold font-manrope leading-normal">0+</h4>
-                                            <h6 class="text-gray-500 text-base font-normal leading-relaxed">Successful Deals</h6>
-                                        </div>
-                                        <div class="flex-col justify-start items-start inline-flex">
-                                            <h4 class="text-zinc-400 text-4xl font-bold font-manrope leading-normal">0+</h4>
-                                            <h6 class="text-gray-500 text-base font-normal leading-relaxed">Happy Clients</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                                                        
-            </section> -->
-            <section class="about-us">
+            <section class="about-us mt-20">
                 <div class="max-w-7xl mx-auto p-6">
                 <div class="text-center mb-8">
-                    <p class="text-gray-500">
+                    <p class="text-gray-400 font-[font3] font-semibold text-2xl">
                     About Our Company
                     </p>
-                    <h1 class="text-4xl font-bold mt-2">
+                    <h1 class="text-5xl leading-none tracking-tight font-[font1]">
                         Innovative solution designed to revolutionize the way of acquiring a vehicle
                     </h1>
                 </div>
-                <div class="flex justify-center space-x-8 mb-8">
+                <div class="flex justify-center space-x-8 my-8">
                     <div class="text-center">
                     <p class="text-3xl font-bold text-blue-600">
                     1k+
@@ -156,7 +114,7 @@
                         Ad Campaign Strategies
                     </h2>
                     <p class="text-gray-600 mb-4">
-                        Our ad campaign strategies are designed to maximize your brand's reach and impact, ensuring effective engagement and measurable results.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad rem molestiae placeat nihil laudantium. Commodi quasi, illo magnam laboriosam quo, quas error, voluptatibus sed soluta nulla dignissimos veritatis doloribus unde.
                     </p>
                     <button class="text-blue-600 font-semibold">
                         Read More
@@ -169,7 +127,7 @@
                         Content Strategy
                     </h2>
                     <p class="text-gray-600 mb-4">
-                        Our content strategy focuses on creating engaging, relevant material that drives audience interaction and supports your business goals.
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, distinctio id tenetur deleniti excepturi libero.
                     </p>
                     <button class="text-blue-600 font-semibold">
                         Read More
